# open-vlm-representation-analysis

./: README.md  pyproject.toml  requirements.txt  research_journal.md
configs/: base.yaml
scripts/: compare_clip_texts.py  extract_dataset_embeddings.py  inspect_clip_embeddings.py  run_class_separation_analysis.py  run_cross_modal_analysis.py  run_joint_visual_analysis.py  run_retrieval_analysis.py  run_similarity_analysis.py  run_visual_analysis.py
src/analysis/: class_separation.py  cross_modal.py  pca.py  retrieval.py  umap.py
src/extraction/: clip_embeddings.py  dataset.py  dataset_embeddings.py
src/models/: load_model.py
src/utils/: cli.py  config_loader.py  logger.py  paths.py  reproducibility.py
src/visualization/: joint_scatter.py  scatter.py
tests/: test_config_loader.py  test_dataset.py  test_load_model.py  test_paths.py  test_reproducibility.py
